@@ -6,8 +6,10 @@
  */
 package com.evolveum.midpoint.repo.sql.helpers.modify;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 import javax.xml.namespace.QName;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,12 +33,13 @@ import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 @Component
 public class PrismEntityMapper {
 
-    private static final Map<Key, Mapper> MAPPERS = new HashMap<>();
+    private static final Map<Key, Mapper<?, ?>> MAPPERS = new HashMap<>();
 
     static {
         MAPPERS.put(new Key(Enum.class, SchemaEnum.class), new EnumMapper());
         MAPPERS.put(new Key(PolyString.class, RPolyString.class), new PolyStringMapper());
         MAPPERS.put(new Key(ActivationType.class, RActivation.class), new ActivationMapper());
+        MAPPERS.put(new Key(ActivationType.class, RFocusActivation.class), new FocusActivationMapper());
         MAPPERS.put(new Key(Referencable.class, REmbeddedReference.class), new EmbeddedObjectReferenceMapper());
         MAPPERS.put(new Key(OperationalStateType.class, ROperationalState.class), new OperationalStateMapper());
         MAPPERS.put(new Key(AutoassignSpecificationType.class, RAutoassignSpecification.class), new AutoassignSpecificationMapper());
@@ -63,7 +66,7 @@ public class PrismEntityMapper {
     @Autowired private RelationRegistry relationRegistry;
     @Autowired private SqlRepositoryConfiguration sqlRepositoryConfiguration;
 
-    public boolean supports(Class inputType, Class outputType) {
+    public boolean supports(Class<?> inputType, Class<?> outputType) {
         Key key = buildKey(inputType, outputType);
 
         return MAPPERS.containsKey(key);
@@ -71,7 +74,8 @@ public class PrismEntityMapper {
 
     public <I, O> Mapper<I, O> getMapper(Class<I> inputType, Class<O> outputType) {
         Key key = buildKey(inputType, outputType);
-        Mapper<I, O> mapper = MAPPERS.get(key);
+        //noinspection unchecked
+        Mapper<I, O> mapper = (Mapper<I, O>) MAPPERS.get(key);
         if (mapper == null) {
             throw new SystemException("Can't map '" + inputType + "' to '" + outputType + "'");
         }
@@ -89,6 +93,7 @@ public class PrismEntityMapper {
         }
 
         if (!supports(input.getClass(), outputType)) {
+            //noinspection unchecked
             return (O) input;
         }
 
@@ -99,7 +104,8 @@ public class PrismEntityMapper {
                 prismContext, relationRegistry, extItemDictionary, sqlRepositoryConfiguration));
 
         Key key = buildKey(input.getClass(), outputType);
-        Mapper<I, O> mapper = MAPPERS.get(key);
+        //noinspection unchecked
+        Mapper<I, O> mapper = (Mapper<I, O>) MAPPERS.get(key);
         if (mapper == null) {
             throw new SystemException("Can't map '" + input.getClass() + "' to '" + outputType + "'");
         }
@@ -131,21 +137,24 @@ public class PrismEntityMapper {
 
             return map(ref, outputType, context);
         } else if (input instanceof PrismContainerValue) {
-            Class<Containerable> inputType = (Class) input.getRealClass();
+            //noinspection unchecked
+            Class<Containerable> inputType = (Class<Containerable>) input.getRealClass();
             try {
-                Containerable container = inputType.newInstance();
-                container.setupContainerValue((PrismContainerValue) input);
+                assert inputType != null;
+                Containerable container = inputType.getConstructor().newInstance();
+                container.setupContainerValue((PrismContainerValue<?>) input);
 
                 return map(container, outputType, context);
-            } catch (InstantiationException | IllegalAccessException ex) {
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ex) {
                 throw new SystemException("Couldn't create instance of container '" + inputType + "'");
             }
         }
 
+        //noinspection unchecked
         return (O) input;
     }
 
-    private Key buildKey(Class inputType, Class outputType) {
+    private Key buildKey(Class<?> inputType, Class<?> outputType) {
         if (isSchemaEnum(inputType, outputType)) {
             return new Key(Enum.class, SchemaEnum.class);
         }
@@ -157,25 +166,25 @@ public class PrismEntityMapper {
         return new Key(inputType, outputType);
     }
 
-    private boolean isSchemaEnum(Class inputType, Class outputType) {
+    private boolean isSchemaEnum(Class<?> inputType, Class<?> outputType) {
         return Enum.class.isAssignableFrom(inputType) && SchemaEnum.class.isAssignableFrom(outputType);
     }
 
     private static class Key {
 
-        private final Class from;
-        private final Class to;
+        private final Class<?> from;
+        private final Class<?> to;
 
-        Key(Class from, Class to) {
+        Key(Class<?> from, Class<?> to) {
             this.from = from;
             this.to = to;
         }
 
-        public Class getFrom() {
+        public Class<?> getFrom() {
             return from;
         }
 
-        public Class getTo() {
+        public Class<?> getTo() {
             return to;
         }
 
@@ -186,8 +195,8 @@ public class PrismEntityMapper {
 
             Key key = (Key) o;
 
-            if (from != null ? !from.equals(key.from) : key.from != null) { return false; }
-            return to != null ? to.equals(key.to) : key.to == null;
+            return Objects.equals(from, key.from)
+                    && Objects.equals(to, key.to);
         }
 
         @Override
